<resources>
    <string name="app_name">Vehicle Maintenance Reminder</string>
    <string name="vehicle_year">Year</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="hint_vehicle_current_mileage">Vehicle Mileage</string>
    <string name="hint_vehicle_monthly_mileage">Miles Driven Monthly</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>

    <string name="select">Select</string>
    <string name="repeat">Repeat</string>
    <string name="action">Action</string>
    <string name="date">Date</string>
    <string name="frequency">Frequency</string>

    <string name="add_vehicle">Add Vehicle</string>
    <string name="enter_additional_info">Enter Additional Info</string>
    <string name="schedule">Vehicle Maintenance Schedule</string>
    <string name="title_activity_settings">Settings</string>

    <string name="current_vehicle">Current Vehicle</string>
    <string name="delete_vehicle">Delete</string>
    <string name="no_vehicles">You have no vehicles</string>

    <string name="menu_settings">Settings</string>

    <string name="item_scheduled">Item scheduled for reminder</string>

    <string name="item_removed">Item removed from reminder</string>

    <string name="select_all_fields">Please select all fields before submitting the form.</string>
    <string name="enter_all_fields">Please enter all fields before submitting the form.</string>
    <string name="appwidget_text">Maintenance App</string>
    <string name="add_widget">Add widget</string>
    <string name="no_maintenance">There are no maintenance scheduled</string>
    <string name="maintenance_list">The following maintenance is/are scheduled:</string>
    <string name="banner_ad_unit_id">ca-app-pub-1608122772272333/9243207207</string>
</resources>
