<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddVehicleFragment">

    <TextView
        android:gravity="center"
        android:text="@string/schedule"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/schedules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        >
        <TextView
            android:id="@+id/select_header"
            android:text="@string/select"
            android:layout_width="55dp"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/action_header"
            android:text="@string/action"
            android:layout_width="@dimen/maintenance_action_width"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/date_header"
            android:text="@string/date"
            android:layout_width="120dp"
            android:textAlignment="center"
            android:textStyle="bold"
            />
    </GridLayout>
    </ScrollView>

</FrameLayout>
