<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddVehicleFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_vehicle_current_mileage"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_vehicle_current_mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_vehicle_current_mileage" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_vehicle_monthly_mileage"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_vehicle_monthly_mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_vehicle_monthly_mileage" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
