<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

 <android.support.v7.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:paddingTop="10dp"
     android:layout_height="?actionBarSize"
     android:elevation="4dp"
     android:background="?attr/colorPrimary"
     app:theme="@style/AppTheme.Base"
     android:titleTextColor="@color/textColorSecondary"
     />

 <LinearLayout android:visibility="gone"
     android:gravity="center"
     android:id="@+id/vehicle_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     >
  <TextView
      android:id="@+id/current_vehicle_title"
      android:gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:text="@string/current_vehicle"/>

  <TextView
      android:id="@+id/current_vehicle_name"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:text="@string/current_vehicle"/>

  <Button
      android:id="@+id/delete_vehicle"
      android:gravity="center"
      android:text="@string/delete_vehicle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

 </LinearLayout>

 <TextView android:visibility="gone"
     android:id="@+id/no_vehicle"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/no_vehicles"/>
</LinearLayout>
